--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,29 +1,31 @@
-.navigation {
+.header-container {
   position: relative;
   padding-block: 1rem;
 }
 
-.navigation-logo {
-  width: 11%;
-}
+.navigation-wrapper {
+  .logo {
+    width: 11%;
+  }
 
-.navigation-list-container {
-  position: fixed;
-  right: 0;
-  top: 0;
+  nav {
+    position: fixed;
+    right: 0;
+    top: 0;
 
-  width: 75%;
-  min-height: 100vh;
+    width: 75%;
+    min-height: 100vh;
+    outline: 2px solid red;
 
-  outline: 2px solid red;
-}
+    ul {
+      list-style-type: none;
+    }
+  }
 
-.navigation-list {
-  list-style-type: none;
-}
-.navigation-container {
   button {
     background-color: transparent;
     border: 0;
+
+    z-index: 1;
   }
 }
