--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,10 +1,12 @@
 .navigation-wrapper {
   min-height: 3rem;
+  isolation: isolate;
+
   .logo {
     width: 11%;
   }
 
-  nav {
+  .nav-mobile {
     position: fixed;
     right: 0;
     top: 0;
@@ -13,6 +15,12 @@
     min-height: 100vh;
     background-color: hsl(0 0% 100%);
 
+    ul {
+      list-style-type: none;
+    }
+  }
+
+  .nav {
     ul {
       list-style-type: none;
     }
@@ -28,8 +36,9 @@
 
 .veil {
   position: absolute;
-  z-index: -1;
   inset: 0;
+
+  z-index: -1;
 
   min-height: 100vh;
   min-width: 100vw;
