--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,13 +1,50 @@
+@import '../../styles/_variables';
+
 .home {
   isolation: isolate;
 }
 
+/* HERO */
+
 .hero {
+  margin-block-start: 1rem;
+
   h1 {
     font-size: 2.5rem;
-    font-family: 'Inter';
+    font-weight: $font-weight-bolder;
     line-height: 1.1;
 
     margin-block-start: 1.3rem;
   }
+
+  p {
+    font-size: 0.94rem;
+    line-height: 1.7;
+    color: hsl($color-dark-grayish-blue);
+    margin-block-start: 1.3rem;
+  }
+
+  button {
+    padding: 0.75rem 2.5rem;
+    margin-block-start: 1.5rem;
+    border: 0;
+
+    font-size: 0.9rem;
+    font-weight: $font-weight-bold;
+    color: hsl($color-offwhite);
+    background-color: hsl($color-red);
+
+    text-transform: uppercase;
+    letter-spacing: 2px;
+  }
+}
+
+/* SIDEBAR */
+
+.sidebar {
+  margin-block-start: 4rem;
+  padding: 1.2rem;
+
+  background-color: hsl($color-dark-blue);
+  color: hsl($color-offwhite);
 }
