--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,5 @@
-@import './_reset';
-@import './_utilities';
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
+@use './reset';
+@use './utilities';
 
 body {
   font-family: 'Inter';
