--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -67,11 +67,35 @@
   background-color: hsl($color-dark-blue);
   color: hsl($color-offwhite);
 
-  @media (max-width: 400px) {
-    margin-block-start: 4rem;
-  }
   @media (min-width: 400px) {
     grid-column: 9 / -1;
-    margin-block-start: 0rem;
   }
+
+  @media (max-width: 850px) {
+    margin-block-start: 4rem;
+  }
+}
+
+/* TRENDING */
+
+.trending {
+  width: 100%;
+
+  @media (max-width: 450px) {
+    flex-direction: column;
+  }
+
+  @media (min-width: 880px) {
+    grid-column: 1 / -1;
+  }
+}
+
+.trending-card {
+  img {
+    width: 33.33%;
+  }
+}
+
+.trending-card-text {
+  flex: 1;
 }
