--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -47,6 +47,6 @@
   min-height: 100vh;
   min-width: 100vw;
 
-  background-color: hsl(0 0 0 / 0.6);
+  // background-color: hsl(0, 0, 0);
   backdrop-filter: blur(100px);
 }
